copyright alert added

--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
                     <li>
                         <a class="footer__links__link" href="#projects" rel="projects__link">PROYECTOS</a>
                     </li>
-                    
                 </ul>
             </div>
+            <p class="footer__copyright">
+                © Copyright 2021. Made by vtrev 
+            </p>
         </footer>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
