nav bar collapsed fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <li>
                     <a class="nav--links__link" href="mailto:v.trevijano@gmail.com" target="_blank">
                       <i class="far fa-envelope"></i>
-                      <span>v.trevijano@gmail.com </span>
+                      <span class="hidden">v.trevijano@gmail.com</span>
                     </a>
                   </li>
                   <li>
