--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </ul>
             </div>
             <p class="footer__copyright">
-                © Copyright 2021. Made by vtrev 
+                © Copyright 2021. Made by VtreV 
             </p>
         </footer>
     </div>
