--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                         <ul>
                             <li class="upgrade-developer__knowledge">Maquetación: HTML5, CSS3, Flexbox, CSS Grid, SASS, Bootstrap.</li>
                             <li class="upgrade-developer__knowledge">Programación Web: Vanilla JavaScript y servicios web (APIS) de terceros, React, Angular JS.</li>
+                            <li class="upgrade-developer__knowledge">Backend: NodeJS, Express JS, bases de datos SQL y NOSQL (MongoDB).</li>
                             <li class="upgrade-developer__knowledge">Control de versiones con Git, Github.</li>
                             <li class="upgrade-developer__knowledge">Filosofía Agile y marco de trabajo Scrum</li>
+                            <li class="upgrade-developer__knowledge">Extras: Gulp, PUG, VSCode, Python, Terminal de Linux.</li>
                         </ul>
                     </div>
                     <div class="university">
@@ -109,7 +111,10 @@
                         <li class="skill__list--item uppercase">angular js</li>
                         <li class="skill__list--item uppercase">php</li>
                         <li class="skill__list--item uppercase">nodejs</li>
-                        <li class="skill__list--item uppercase">typescript</li>
+                        <li class="skill__list--item uppercase">SQL</li>
+                        <li class="skill__list--item uppercase">NOSQL (MongoDB)</li>
+                        <li class="skill__list--item uppercase">express.js</li>
+                        <li class="skill__list--item uppercase">git</li>
                         <li id="purple" class="skill__list--item uppercase">Comunicativo</li>
                         <li id="purple" class="skill__list--item uppercase">Atención al detalle</li>
                         <li id="purple" class="skill__list--item uppercase">Resolutivo</li>
