cv file changed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="nav--links__link" href="./assets/documents/CV Victor Trevijano front-end-final.pdf" target="_blank">
+                    <a class="nav--links__link" href="./assets/documents/CV Victor Trevijano front-end.pdf" target="_blank">
                         <i class="fas fa-file-pdf"></i>
                       <span> Descargar CV</span>
                     </a>
